# ntrip-caster

./: Dockerfile  README.md  aero.yaml  app.py  docker-build.sh  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
config/: mountpoints.json  mountpoints.json.example
tests/: test_caster.py
